Добавлен новый класс RouteDTO, символизирующий один полный маршрут, у него есть список рейсов, дата отбытия, время прибытия, и время в минутах в пути, теперь метод контроллера возвращает список из таких классов, соответсвенно метод сервиса изменен для парсинга данных в класс и создание списка данных классов, все варианты сортируются по отдалению от времени которое указал клиент