@@ -2,15 +2,15 @@ package ru.sasha.org.router.services;
 
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
-import ru.sasha.org.router.dto.CityDTO;
-import ru.sasha.org.router.dto.FlightDTO;
-import ru.sasha.org.router.dto.TargetFlightDTO;
-import ru.sasha.org.router.dto.TargetRoute;
+import ru.sasha.org.router.dto.*;
 import ru.sasha.org.router.model.Flight;
 import ru.sasha.org.router.repository.FlightRepository;
 import ru.sasha.org.router.util.FlightType;
 import ru.sasha.org.router.util.RouteFinder;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -37,13 +37,28 @@ public class FlightService {
         RouteFinder routeFinder = new RouteFinder(cityService.findAll(),
                 findFlightsByType(targetRoute.getType()));
 
-        return new TargetFlightDTO(routeFinder.findRoutes(cityService.findCityByNAme(targetRoute.getDepartureCity().getCityName()),
+        List<RouteDTO> routes = new ArrayList<>();
+
+        List<List<FlightDTO>> flights = routeFinder.findRoutes(cityService.findCityByNAme(targetRoute.getDepartureCity().getCityName()),
                         cityService.findCityByNAme(targetRoute.getArrivalCity().getCityName()))
                 .stream()
                 .map(innerList -> innerList.stream()
                         .map(this::convertToFlightDTO)
                         .collect(Collectors.toList()))
-                .collect(Collectors.toList()));
+                .toList();
+
+        if (flights.isEmpty()){
+            return new TargetFlightDTO(List.of());
+        }
+
+        for (List<FlightDTO> f : flights){
+            RouteDTO routeDTO = new RouteDTO(f);
+            routes.add(routeDTO);
+        }
+
+        routes.sort(Comparator.comparing(RouteDTO::getDeparture));
+
+        return new TargetFlightDTO(routes);
     }
 
     private FlightDTO convertToFlightDTO(Flight flight){
